--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                   <div class="logo-boton">
                       <div>
-                        <a class="navbar-brand" href="../index.html"><img src="./imagenes/LOGO.svg" ></a>
+                        <a class="navbar-brand" href="./index.html"><img src="./imagenes/LOGO.svg" ></a>
                       </div>
                           <div> 
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -172,10 +172,10 @@
     <section class="conteiner-grid">
                      
         <div id="contenido-info">
-                <div>
+                <div class="img-experiencia">
                     <img src="./imagenes/ico-cucurucho.png" alt="img-cucurucho">
                 </div>
-                    <div>
+                    <div class="texto-info">
                         <h3>Por que nosotros </h3>
                         <h2>Experiencia unica </h2>
                     </div>
@@ -183,10 +183,10 @@
             
        <div class="items-box">
                     <div class="items-info">
-                        <div>
-                            <img src="./imagenes/cup.jpg" alt="cucu-imagen">
+                    <div>
+                            <img src="./imagenes/items-home/helado-artesano.png" alt="cucu-imagen">
                         </div>
-                        <div>
+                        <div >
                             <h3>100% Artesanal</h3>
                             <p>Nuestros maestros heladeros han trabajado duro, explorando, investigando y experimentando,
                                 para conseguir el equilibrio entre aroma, sabor y textura.</p>
@@ -194,7 +194,7 @@
                 </div>
                     <div class="items-info">
                     <div>
-                        <img src="./imagenes/tarrina.jpg" alt="tarrina-img">
+                        <img src="./imagenes/items-home/copa.png" alt="tarrina-img">
                     </div>
                         <div>
                             <h3>Nada que esconder</h3>
@@ -204,7 +204,7 @@
                     </div>
                         <div class="items-info">
                         <div>
-                            <img src="./imagenes/cucu-png.jpg" alt="cucurucho.img">
+                            <img src="./imagenes/items-home/helado.png" alt="cucurucho.img">
                         </div>
                         <div>
                             <h3>Más de 40 sabores</h3>
@@ -224,7 +224,7 @@
                             </div>
                                 <div class="items-info">
                                 <div>
-                                    <img src="./imagenes/fresh.jpg" alt="fresh-img">
+                                    <img src="./imagenes/items-home/fresh.png" alt="fresh-img">
                                 </div>
                                     <div>
                                         <h3>Frescura y sabor</h3>
@@ -234,7 +234,7 @@
                                 </div>
                                     <div class="items-info">
                                     <div>
-                                        <img src="./imagenes/milkshake.jpg" alt="milkshake-img">
+                                        <img src="./imagenes/items-home/batidos.png" alt="milkshake-img">
                                     </div>
                                     <div>
                                         <h3>Más que helados</h3>
