--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
 
     <!--Separador -->
     <div class="separador-auto">
-      <img src="../imagenes/Captura de pantalla (7).png" alt="">
+      <img src="../imagenes/pedidos/separador.png" alt="">
     </div>
 
     <!--Formulario-->
