--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -12,8 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
-
-
+            <!--FONT h3 postre item-->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
+            <!--font h3 principal -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--HEADER-->
@@ -75,9 +81,11 @@
         </div>
              <div class="cajas-pedidos">
                           <div class="tarrinas-img">
+                                <img src="../imagenes/pedidos/tarrinas.jpg" alt="">
                                 <h4>Tarrinas </h4>
                             </div>   
                                 <div class="copas-img">
+                                    <img src="../imagenes/pedidos/Copa-al-gusto.jpg" alt="">
                                     <h4>Copas al Gusto </h4>
                                 </div>
              </div>
@@ -309,7 +317,7 @@
                                     </div>
                                         <div>
                                             <h3>BISCOLATO CON GELATO</h3>
-                                            <p>Precio ..</p>
+                                            <p>Precio 4,20</p>
                                         </div>
                                 </div>
 
@@ -321,7 +329,7 @@
                             </div>
                                 <div>
                                     <h3>COPETA BROWNIE CON GELATO </h3>
-                                    <p>Precio ..</p>
+                                    <p>Precio 4,20</p>
                                 </div>
                         </div>
 
@@ -333,7 +341,7 @@
                     </div>
                         <div>
                             <h3>PALMERA ARTESANA GIGANTE</h3>
-                            <p>Precio ..</p>
+                            <p>Precio 4,50</p>
                         </div>
                 </div>
         <div class="postre-item"> 
@@ -344,7 +352,7 @@
             </div>
                 <div>
                     <h3>PALMERA ARTESANA CON GELATO</h3>
-                    <p>Precio ..</p>
+                    <p>Precio 4,90</p>
                 </div>
         </div>
 <div class="postre-item"> 
@@ -355,7 +363,7 @@
     </div>
         <div>
             <h3>PILA DE TORTITAS CON GELATO </h3>
-            <p>Precio ..</p>
+            <p>Precio 5,20</p>
         </div>
 </div>
         <div class="postre-item"> 
@@ -366,7 +374,7 @@
             </div>
                 <div>
                     <h3>CREPE</h3>
-                    <p>Precio ..</p>
+                    <p>Precio 5,20</p>
                 </div>
         </div>
                 <div class="postre-item"> 
@@ -377,7 +385,7 @@
                     </div>
                         <div>
                             <h3>CREPE CON GELATO</h3>
-                            <p>Precio ..</p>
+                            <p>Precio 5,70</p>
                         </div>
                 </div>
                         <div class="postre-item"> 
@@ -388,7 +396,7 @@
                             </div>
                                 <div>
                                     <h3>ALFAJOR DE MAICENA</h3>
-                                    <p>Precio ..</p>
+                                    <p>Precio 3,20</p>
                                 </div>
                         </div>
                                 
