--- a/pages/sabores.html
+++ b/pages/sabores.html
@@ -90,145 +90,188 @@
                           </div>
                         </div>
                             <div class="sabores-helado">
-                              <h3>CHOCOLATE VEGANO</h3>
+                              <h3>CHOCOLATE </h3>
                               <div>
                                 <img src="../imagenes/gustos/Chocolate.jpg" alt="Chocolate">
                               </div>
                             </div>
                                 <div class="sabores-helado">
-                                  <h3>CHOCOLATE</h3>
+                                  <h3>COCO</h3>
                                   <div>
                                     <img src="../imagenes/gustos/Coco.jpg" alt="Coco">
                                   </div>
                                 </div>
                                     <div class="sabores-helado">
-                                      <h3>COCO</h3>
+                                      <h3>CREMINO DE AVELLANA</h3>
                                       <div>
                                         <img src="../imagenes/gustos/Cremino-de-avellana.jpg" alt="Cremino-de-avellana">
                                       </div>
                                     </div>
                                         <div class="sabores-helado">
-                                          <h3>CREMINO DE AVELLANA</h3>
+                                          <h3>CREMINO DE PISTACHO</h3>
                                           <div>
                                             <img src="../imagenes/gustos/Cremino-de-pistacho.jpg" alt="Cremino-de-pistacho">
                                           </div>
                                         </div>
                                             <div class="sabores-helado">
-                                              <h3>CREMINO DE PISTACHO</h3>
+                                              <h3>DULCE DE LECHE </h3>
                                               <div>
                                                 <img src="../imagenes/gustos/Dulce-de-leche-Granizado.jpg" alt="Dulce-de-leche-Granizado">
                                               </div>
                                             </div>
                                                 <div class="sabores-helado">
-                                                  <h3>STRACHIATTELLA</h3>
+                                                  <h3>FRESA</h3>
                                                   <div>
                                                     <img src="../imagenes/gustos/Fresa.jpg" alt="Fresa">
                                                   </div>
                                                 </div>
                                                     <div class="sabores-helado">
-                                                      <h3>FRESA</h3>
+                                                      <h3>HAPPY HIPPO</h3>
                                                       <div>
                                                         <img src="../imagenes/gustos/Happy-hippo.jpg" alt="Happy-hippo">
                                                       </div>
                                                     </div>
                                                         <div class="sabores-helado">
-                                                          <h3>HAPPY HIPPO</h3>
+                                                          <h3>KINDER BUENO</h3>
                                                           <div>
                                                             <img src="../imagenes/gustos/Kinder-bueno.jpg" alt="Kinder-bueno">
                                                           </div>
                                                         </div>
                                                               <div class="sabores-helado">
-                                                                <h3>KINDER BUENO</h3>
+                                                                <h3>KINDER MIX</h3>
                                                                 <div>
                                                                   <img src="../imagenes/gustos/Kinder-Mix.jpg" alt="Kinder-Mix">
                                                                 </div>
                                                               </div>
                                                                   <div class="sabores-helado">
-                                                                    <h3>KINDER MIX</h3>
+                                                                    <h3>KINDER </h3>
                                                                     <div>
                                                                       <img src="../imagenes/gustos/Kinder.jpg" alt="Kinder">
                                                                     </div>
                                                                   </div>
                                                             <div class="sabores-helado">
-                                                              <h3>KINDER</h3>
+                                                              <h3>LEMON PIE</h3>
                                                               <div>
                                                                 <img src="../imagenes/gustos/Lemon-pie.jpg" alt="Lemon-pie">
                                                               </div>
                                                             </div>
                                                     <div class="sabores-helado">
-                                                      <h3>LEMON PIE</h3>
+                                                      <h3>LIMON</h3>
                                                       <div>
                                                         <img src="../imagenes/gustos/Limón.jpg" alt="Limón">
                                                       </div>
                                                     </div>
                                               <div class="sabores-helado">
-                                                <h3>LIMON</h3>
+                                                <h3>MANDORLA</h3>
                                                 <div>
                                                   <img src="../imagenes/gustos/Mandorla-e-kataifi.jpg" alt="Mandorla-e-kataifi">
                                                 </div>
                                               </div>
                                         <div class="sabores-helado">
-                                          <h3>MANDORLA</h3>
+                                          <h3>MANGO</h3>
                                           <div>
                                             <img src="../imagenes/gustos/Mango.jpg" alt="Mango">
                                           </div>
                                         </div>
                                   <div class="sabores-helado">
-                                    <h3>MANGO</h3>
+                                    <h3>MASCARPONE TOCINO</h3>
                                     <div>
                                       <img src="../imagenes/gustos/Mascarpone-tocino.jpg" alt="Mascarpone-tocino">
                                     </div>
                                   </div>
                           <div class="sabores-helado">
-                            <h3>TOCINO DE CIELO</h3>
+                            <h3>MENTA CHOCOLATE</h3>
                             <div>
                               <img src="../imagenes/gustos/Menta.jpg" alt="Menta">
                             </div>
                           </div>
                     <div class="sabores-helado">
-                      <h3> MENTA CHOCOLATE</h3>
+                      <h3> MILKYBAR GALLETA</h3>
                       <div>
                         <img src="../imagenes/gustos/Milkybar-galleta.jpg" alt="Milkybar-galleta">
                       </div>
                     </div>
             <div class="sabores-helado">
-              <h3>MILKY BAR</h3>
+              <h3>NATA</h3>
               <div>
                 <img src="../imagenes/gustos/Nata.jpg" alt="Nata">
               </div>
             </div>
         <div class="sabores-helado">
-          <h3>NATA</h3>
+          <h3>NUTELLA</h3>
           <div>
             <img src="../imagenes/gustos/Nutella.jpg" alt="Nutella">
           </div>
             </div>    
       <div class="sabores-helado">
-        <h3>NUETELLA</h3>
+        <h3>OREO</h3>
         <div>
           <img src="../imagenes/gustos/Oreo.jpg" alt="Oreo">
         </div>
         </div>      
     <div class="sabores-helado">
-      <h3>OREO</h3>
+      <h3>RAFAELLO</h3>
       <div>
         <img src="../imagenes/gustos/Rafaello.jpg" alt="Rafaello">
       </div>
        </div> 
        <div class="sabores-helado">
-        <h3>RAFAELLO </h3>
+        <h3>ROCHER </h3>
         <div>
           <img src="../imagenes/gustos/Rocher.jpg" alt="Rocher">
         </div>
          </div> 
          <div class="sabores-helado">
-          <h3>ROCHER</h3>
+          <h3>STACCIATELLA</h3>
           <div>
             <img src="../imagenes/gustos/Stracciatella.jpg" alt="Stracciatella">
           </div>
            </div> 
 
       </main>
+      <!--FOOTER-->
+
+<footer>
+  <div class="separator-footer">
+    <img src="../imagenes/Captura de pantalla (7).png" alt="separator-footer">
+  </div>
+        <div class="cont-footer">
+            <div class="foot-info">
+                <h4>Donde estamos</h4>
+                    <ul>
+                        <li>Dirección: Av. Plutarco 61</li>
+                        <li>29010 Málaga</li>
+                        <li>Horario: LU a DO de 11 a 2 h.</li>
+                    </ul>
+            </div>
+                 <div class="foot-info">
+                    <h4>Contacto</h4>
+                    <ul>
+                        <li>Teléfono: 952 91 72 91</li>
+                        <li>Email: info@capobonifati.com</li>
+                    </ul>
+                 </div>
+                     <div class="foot-info">
+                        <h4>Capo Bonifati</h4>
+                        <ul>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="pages/productos.html">Productos</a></li>
+                            <li><a href="pages/quisomos.html">Quienes Somos</a></li>
+                            <li><a href="pages/contacto.html"></a></li>
+                            <li><a href="pages/ayuda.html"></a></li>
+                        </ul>
+                     </div>
+                         <div class="foot-info">
+                            <h4>Siguenos</h4>
+                            <ul>
+                                <li>Istagram</li>
+                                <li>Facebook</li>
+                                <li>Twitter</li>
+                                <li>Tik-Tok </li>
+                            </ul>
+                         </div>
+        </div>
+</footer>
 <!--js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
