arreglos de media q

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
- 
+    <!--h3 fondo madera -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
+    
     <title>Capo Bonifati</title>
 </head>
 <body>
@@ -144,12 +148,12 @@
 <section class="fondo-madera">
                                        
     <div class="box-carta">
-        <div>
+        <div class="tarta-img">
             <img src="imagenes/ico-tarta.png" alt="img-tarta">  
         </div> 
             <div class="conteiner-text">
                 <h3>Descubre nuestra carta</h3>
-                <h2>ABIERTO DURANTE TODO <span >EL AÑO</span></h2>
+                <h2>ABIERTO DURANTE TODO <span >  EL AÑO</span></h2>
                 <p>Disfruta de nuestros helados, copas, bebidas, smoothies, postres artesanos,<span> y del mejor café italiano.</span> </p>
                 <button><a href="./imagenes/carta.pdf">Ver la Carta </a></button>
             </div>  
