arreglos alt, clases ...

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,13 +63,13 @@
               </ul>
         </div>
         <div class="img-contacto">
-            <img src=".././imagenes/contacto/capo-bonifati-contacto.jpg" alt="">
+            <img src=".././imagenes/contacto/capo-bonifati-contacto.jpg" alt="contacto-capo">
         </div>
     </main>
 
     <!--Separador -->
     <div class="separador-auto">
-      <img src="../imagenes/pedidos/separador.png" alt="">
+      <img src="../imagenes/pedidos/separador.png" alt="separador-img">
     </div>
 
     <!--Formulario-->
@@ -116,20 +116,20 @@
                            <div class="foot-info">
                               <h4>Capo Bonifati</h4>
                               <ul>
-                                  <li><a href="index.html">Inicio</a></li>
-                                  <li><a href="pages/productos.html">Productos</a></li>
-                                  <li><a href="pages/quisomos.html">Quienes Somos</a></li>
-                                  <li><a href="pages/contacto.html"></a></li>
-                                  <li><a href="pages/ayuda.html"></a></li>
+                                <li><a href="../index.html">Inicio</a></li>
+                                <li><a href="./pedidos.html">Productos</a></li>
+                                <li><a href="./quienessomos.html">Quienes Somos</a></li>
+                                <li><a href="./contacto.html"></a>Contacto</li>
+                                <li><a href="./sabores.html"></a>Sabores</li>
                               </ul>
                            </div>
                                <div class="foot-info">
                                   <h4>Siguenos</h4>
                                   <ul>
-                                      <li>Istagram</li>
-                                      <li>Facebook</li>
-                                      <li>Twitter</li>
-                                      <li>Tik-Tok </li>
+                                    <li><a href="https://www.instagram.com/capobonifati/" target="_blank">Instagram</a></li>
+                                    <li><a href="https://www.facebook.com/CapoBonifati/" target="_blank">Facebook</a></li>
+                                    <li><a href="https://twitter.com/CapoBonifati" target="_blank">Twitter</a></li>
+                                    <li><a href="https://www.tiktok.com/@capobonifatigelato?lang=es" target="_blank">Tik-Tok</a></li>
                                   </ul>
                                </div>
               </div>
