--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pedidos</title>
     <!--css-->
     <link rel="stylesheet" href="../css/estilos.css">
      <!--boostrap-->
@@ -81,11 +81,11 @@
         </div>
              <div class="cajas-pedidos">
                           <div class="tarrinas-img">
-                                <img src="../imagenes/pedidos/tarrinas.jpg" alt="">
+                                <img src="../imagenes/pedidos/tarrinas.jpg" alt="tarrina-img">
                                 <h4>Tarrinas </h4>
                             </div>   
                                 <div class="copas-img">
-                                    <img src="../imagenes/pedidos/Copa-al-gusto.jpg" alt="">
+                                    <img src="../imagenes/pedidos/Copa-al-gusto.jpg" alt="copa-img">
                                     <h4>Copas al Gusto </h4>
                                 </div>
              </div>
@@ -107,7 +107,7 @@
             <div class="batido-item">
                 <div>
                     <a href="">
-                        <img src="../imagenes/pedidos/batido-capoMostro.jpg" alt="">
+                        <img src="../imagenes/pedidos/batido-capoMostro.jpg" alt="batido-mostro">
                     </a>
                 </div>
                     <div>
@@ -427,20 +427,20 @@
                        <div class="foot-info">
                           <h4>Capo Bonifati</h4>
                           <ul>
-                              <li><a href="index.html">Inicio</a></li>
-                              <li><a href="pages/productos.html">Productos</a></li>
-                              <li><a href="pages/quisomos.html">Quienes Somos</a></li>
-                              <li><a href="pages/contacto.html"></a></li>
-                              <li><a href="pages/ayuda.html"></a></li>
+                              <li><a href="../index.html">Inicio</a></li>
+                              <li><a href="./pedidos.html">Productos</a></li>
+                              <li><a href="./quienessomos.html">Quienes Somos</a></li>
+                              <li><a href="./contacto.html"></a>Contacto</li>
+                              <li><a href="./sabores.html"></a>Sabores</li>
                           </ul>
                        </div>
                            <div class="foot-info">
                               <h4>Siguenos</h4>
                               <ul>
-                                  <li>Istagram</li>
-                                  <li>Facebook</li>
-                                  <li>Twitter</li>
-                                  <li>Tik-Tok </li>
+                                <li><a href="https://www.instagram.com/capobonifati/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.facebook.com/CapoBonifati/" target="_blank">Facebook</a></li>
+                                <li><a href="https://twitter.com/CapoBonifati" target="_blank">Twitter</a></li>
+                                <li><a href="https://www.tiktok.com/@capobonifatigelato?lang=es" target="_blank">Tik-Tok</a></li>
                               </ul>
                            </div>
           </div>
