--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quienes Somos</title>
     <!--ESTILOS CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
      <!--boostrap-->
@@ -60,15 +60,15 @@
 
     <!--Seccion Viaje a Italia -->
 
-<main class="box-stacion">
-            <div class="box-train">
+<main class="box-estacion">
+            <div class="box-tren">
                 <div class="box-text-train">
                     <h3>UN VIAJE A ITALIA</h3>
                      <p>La historia de nuestra heladería se remonta muchos años atrás…  Bonifati, un pequeño pueblecito al sur de Italia y lugar de nacimiento de Antonio,
                      “El nonno”, junto al resto de su familia. Una familia de heladeros artesanos que separada por la guerra tuvo que emigrar a América y empezar de cero…</p>
                     <p>Hace unos años, los descendientes de aquella familia regresamos a nuestras raíces, en un viaje para lograr trasmitir la esencia de toda su tradición heladera y artesanal.</p>   
                 </div>
-                    <div class="img-train">
+                    <div class="img-tren">
                         <img src="../imagenes/tren2.png" alt="img-tren">
                     </div>
             </div>
@@ -138,21 +138,20 @@
                                            <div class="foot-info">
                                               <h4>Capo Bonifati</h4>
                                               <ul>
-                                                  <li><a href="index.html">Inicio</a></li>
-                                                  <li><a href="pages/productos.html">Productos</a></li>
-                                                  <li><a href="pages/quisomos.html">Quienes Somos</a></li>
-                                                  <li><a href="pages/contacto.html"></a></li>
-                                                  <li><a href="pages/ayuda.html"></a></li>
+                                                <li><a href="../index.html">Inicio</a></li>
+                                                <li><a href="./pedidos.html">Productos</a></li>
+                                                <li><a href="./quienessomos.html">Quienes Somos</a></li>
+                                                <li><a href="./contacto.html"></a>Contacto</li>
+                                                <li><a href="./sabores.html"></a>Sabores</li>
                                               </ul>
                                            </div>
                                                <div class="foot-info">
                                                   <h4>Siguenos</h4>
                                                   <ul>
-                                                      <li>Istagram</li>
-                                                      <li>Facebook</li>
-                                                      <li>Twitter</li>
-                                                      <li>Tik-Tok </li>
-                                                  </ul>
+                                                    <li><a href="https://www.instagram.com/capobonifati/" target="_blank">Instagram</a></li>
+                                                    <li><a href="https://www.facebook.com/CapoBonifati/" target="_blank">Facebook</a></li>
+                                                    <li><a href="https://twitter.com/CapoBonifati" target="_blank">Twitter</a></li>
+                                                    <li><a href="https://www.tiktok.com/@capobonifatigelato?lang=es" target="_blank">Tik-Tok</a></li>
                                                </div>
                               </div>
                     </footer>        
