--- a/pages/sabores.html
+++ b/pages/sabores.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sabores</title>
     <!--Estilos-->
     <link rel="stylesheet" href="../css/estilos.css">
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-    <!--FONT-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">  
-        <!--FONT TITULO PRINCIPAL-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
+      <!--bootstrap-->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
+          <!--FONT-->
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">  
+            <!--FONT TITULO PRINCIPAL-->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slackside+One&display=swap" rel="stylesheet">
+              <!--animaciones -->
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <header>
@@ -55,8 +57,8 @@
         </header>
 
       <!--TITULO-->
-      <div class="titulo-sabores">
-        <h2>
+      <div class="titulo-sabores ">
+        <h2 class="animate__pulse">
           NUESTROS SABORES
         </h2>
       </div>
@@ -254,20 +256,20 @@
                      <div class="foot-info">
                         <h4>Capo Bonifati</h4>
                         <ul>
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="pages/productos.html">Productos</a></li>
-                            <li><a href="pages/quisomos.html">Quienes Somos</a></li>
-                            <li><a href="pages/contacto.html"></a></li>
-                            <li><a href="pages/ayuda.html"></a></li>
+                          <li><a href="../index.html">Inicio</a></li>
+                          <li><a href="./pedidos.html">Productos</a></li>
+                          <li><a href="./quienessomos.html">Quienes Somos</a></li>
+                          <li><a href="./contacto.html"></a>Contacto</li>
+                          <li><a href="./sabores.html"></a>Sabores</li>
                         </ul>
                      </div>
                          <div class="foot-info">
                             <h4>Siguenos</h4>
                             <ul>
-                                <li>Istagram</li>
-                                <li>Facebook</li>
-                                <li>Twitter</li>
-                                <li>Tik-Tok </li>
+                              <li><a href="https://www.instagram.com/capobonifati/" target="_blank">Instagram</a></li>
+                              <li><a href="https://www.facebook.com/CapoBonifati/" target="_blank">Facebook</a></li>
+                              <li><a href="https://twitter.com/CapoBonifati" target="_blank">Twitter</a></li>
+                              <li><a href="https://www.tiktok.com/@capobonifatigelato?lang=es" target="_blank">Tik-Tok</a></li>
                             </ul>
                          </div>
         </div>
