arreglos nuestros productos rutas

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                                     <h3>Helados Artesanales</h3>
                                 </div>
                                         <div>
-                                           <a href="./pages/productos.html"> <img src="imagenes/producto-2.jpg" alt="imagen-producto-2"></a>
+                                           <a href="./pages/pedidos.html"> <img src="imagenes/producto-2.jpg" alt="imagen-producto-2"></a>
                                             <h3>Nuestros Batidos</h3>
                                         </div>
                                                 <div>
-                                                    <a href="./page/productos.html"><img src="imagenes/producto-3.jpg"alt="imagen-producto-3"></a>
+                                                    <a href="./page/pedidos.html"><img src="imagenes/producto-3.jpg"alt="imagen-producto-3"></a>
                                                     <h3>Postres Artesanales</h3>
                                                 </div>
                             </div>
