proyecto final vacca fernandez lucas

--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -181,6 +181,17 @@
                         <p class="estilo-precio">Precio 3,70€ - 4,20€ </p>
                     </div>
             </div>
+    <div class="batido-item "> 
+        <div >
+            <a href="" >
+                <img src="../imagenes/pedidos/cafe-helado.jpg" alt="cafe-helado">
+            </a>
+        </div>
+            <div>
+                <p>CAFE HELADO</p>
+                <p class="estilo-precio">Precio 3,70€  </p>
+            </div>
+    </div>
         </div>
     </section>
 
@@ -377,7 +388,7 @@
                     <p>Precio 5,20</p>
                 </div>
         </div>
-                <div class="postre-item"> 
+                <div class="postre-item crepe-item"> 
                     <div>
                         <a href="">
                             <img src="../imagenes/tartas/crepe-helado.jpg" alt="crepe-helado">
@@ -388,7 +399,7 @@
                             <p>Precio 5,70</p>
                         </div>
                 </div>
-                        <div class="postre-item"> 
+                        <div class="postre-item alfajor-item"> 
                             <div>
                                 <a href="">
                                     <img src="../imagenes/tartas/alfajor-maicena.jpg" alt="alfajor-maicena">
