arreglo de ruta carrito

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                           </ul>
               </div>
               <div id="contenedor-compra">
-                <a href=""  id ="carrito-compra" >  <img src="../imagenes/carrito.jpeg" alt=""></a>
+                <a href=""  id ="carrito-compra" >  <img src="./imagenes/carrito.jpeg" alt=""></a>
                 <div id="contenedor-carrito" >
 
                 </div>
