ultimos detalles desde rama 2

--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -75,7 +75,7 @@
 <!--Pide lo que quieras -->
 
     <section class="caja-titulo">
-       <div>
+       <div >
         <h3>Pide lo que quieras </h3>
         <h2>Te lo llevamos a domicilio </h2>
        </div>
@@ -87,6 +87,15 @@
     <div class="separador-auto">
         <img src="../imagenes/pedidos/separador.png" alt="separador-auto">
     </div>
+
+<!--MODAL JS -->
+
+<div id="modal-js" class="modal-prin">
+    <div class="modal-cont">
+        <button id="modal-cierre" class="boton-modal">x</button>
+        <h5>¡Gracias por su compra! </h5>
+    </div>
+</div>
 
 <!--Pedidos-->
     <main class="main-pedidos">
