--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -6,6 +6,8 @@
     <title>Pedidos</title>
     <!--css-->
     <link rel="stylesheet" href="../css/estilos.css" />
+    <!--animet css-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--boostrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -54,15 +56,7 @@
               /></a>
             </div>
             <div>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
+              <button class="navbar-toggler"type="button"data-bs-toggle="collapse"data-bs-target="#navbarNavDropdown"aria-controls="navbarNavDropdown"aria-expanded="false"aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
             </div>
@@ -70,12 +64,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="../index.html"
-                  >HOME</a
-                >
+                <a class="nav-link active"aria-current="page"href="../index.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./quienessomos.html"
@@ -238,6 +227,8 @@
     <script src="../index.js"></script>
     <!--sweet alarm-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!--JS boot-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   </body>
 </html>
