--- a/pages/tarrinas.html
+++ b/pages/tarrinas.html
@@ -6,13 +6,11 @@
     <title>Document</title>
     <!--css-->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!--animet css-->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <!--boostrap-->
-      <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    /> 
+     <!--boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
 </head>
 <body>
     <!--HEADER-->
@@ -21,20 +19,10 @@
           <div class="container-fluid">
             <div class="logo-boton">
               <div>
-                <a class="navbar-brand" href="../index.html"
-                  ><img src="../imagenes/LOGO.svg"
-                /></a>
+                <a class="navbar-brand" href="../index.html"><img src="../imagenes/LOGO.svg"/></a>
               </div>
               <div>
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNavDropdown"
-                  aria-controls="navbarNavDropdown"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
+                <button class="navbar-toggler"type="button"data-bs-toggle="collapse"data-bs-target="#navbarNavDropdown"aria-controls="navbarNavDropdown"aria-expanded="false"aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
               </div>
@@ -42,17 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="../index.html"
-                    >HOME</a
-                  >
+                  <a class="nav-link active"aria-current="page"href="../index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./quienessomos.html"
-                    >QUIENES SOMOS
-                  </a>
+                  <a class="nav-link" href="./quienessomos.html">QUIENES SOMOS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./pedidos.html">PEDIDOS</a>
@@ -84,7 +65,10 @@
       
 <!--js-->
 <script src="../js/tarrinas.js"></script>
-         <!--sweet alarm-->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!--sweet alarm-->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!--JS boot-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
